# gov-info-assistant

./: .env.example  .gitignore  DAY1_COMPLETION_CHECKLIST.md  Dockerfile.client  Dockerfile.server  LICENSE  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-client.txt  requirements-dev.txt  requirements.txt  test_azure_openai.py
data/: README.md
docs/: README.md  참고사항_0921.txt
fastapi_server/: __init__.py  main.py
fastapi_server/api/: __init__.py  chat.py  health.py  search.py
fastapi_server/api/v1/: chat.py  router.py  search.py
fastapi_server/core/: __init__.py  config.py  logging_config.py
fastapi_server/core/agents/: __init__.py  base.py  interfaces.py
fastapi_server/core/services/: __init__.py
fastapi_server/core/workflow/: __init__.py  nodes.py  state.py
fastapi_server/models/: __init__.py  chat.py  common.py  schemas.py  search.py
fastapi_server/utils/: __init__.py  logging.py
nginx/: nginx.conf
streamlit_app/: __init__.py  main.py
streamlit_app/components/: __init__.py  chat_interface.py  search_interface.py  search_results.py  sidebar.py
streamlit_app/pages/: __init__.py  chat.py
streamlit_app/services/: __init__.py  api_client.py
streamlit_app/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_agent_interfaces.py  test_health_api.py  test_langgraph_state.py  test_models.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_api_routers.py  test_streamlit_components.py
